{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 352,
  "lineage": "9e8192e0-79b6-c5dd-1281-fff47629ddce",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:route-table/rtb-017c25143f8b31599",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0a674be5cf69f6c04",
                "route_table_id": "rtb-017c25143f8b31599",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-017c25143f8b31599",
            "owner_id": "632193298015",
            "region": "us-east-1",
            "route_table_id": "rtb-017c25143f8b31599",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
              }
            ],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-072112754da905ebf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:vpc/vpc-072112754da905ebf",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07da6bf168bfeb8a7",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-02cdabe100dbae3fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072112754da905ebf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017c25143f8b31599",
            "owner_id": "632193298015",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-PROD"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad3ca404acb81e5",
            "arn": "arn:aws:ec2:us-east-1:632193298015:elastic-ip/eipalloc-00ad3ca404acb81e5",
            "association_id": "eipassoc-01c225bdf956f5728",
            "domain": "vpc",
            "id": "eipalloc-00ad3ca404acb81e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02765f8bd37f89b84",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-54-208-22-52.compute-1.amazonaws.com",
            "public_ip": "54.208.22.52",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-nat",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:internet-gateway/igw-098dc3e109b3ed227",
            "id": "igw-098dc3e109b3ed227",
            "owner_id": "632193298015",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad3ca404acb81e5",
            "association_id": "eipassoc-01c225bdf956f5728",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04d898b00331c99d2",
            "network_interface_id": "eni-02765f8bd37f89b84",
            "private_ip": "10.0.1.246",
            "public_ip": "54.208.22.52",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c30e43b74cc0335d",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082c8125f1c4e104e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d898b00331c99d2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082c8125f1c4e104e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c19ba414edf34de01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d898b00331c99d2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c19ba414edf34de03322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-098dc3e109b3ed227",
            "id": "r-rtb-06df5a82afbac4a251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06df5a82afbac4a253322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_peering_connection.default",
            "module.vpc.data.aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:route-table/rtb-082c8125f1c4e104e",
            "id": "rtb-082c8125f1c4e104e",
            "owner_id": "632193298015",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d898b00331c99d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05481590518179f0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "rtb-082c8125f1c4e104e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:route-table/rtb-0c19ba414edf34de0",
            "id": "rtb-0c19ba414edf34de0",
            "owner_id": "632193298015",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d898b00331c99d2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05481590518179f0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "rtb-0c19ba414edf34de0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:route-table/rtb-06df5a82afbac4a25",
            "id": "rtb-06df5a82afbac4a25",
            "owner_id": "632193298015",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098dc3e109b3ed227",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0fd6e8fb26174dfad"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05481590518179f0a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "rtb-06df5a82afbac4a25",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae7a0165b0f2600",
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e",
            "subnet_id": "subnet-04a88128aaa207760"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf228ea1b46ba549",
            "region": "us-east-1",
            "route_table_id": "rtb-082c8125f1c4e104e",
            "subnet_id": "subnet-0aad56f29c800f826"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f03b42dc73e7596a",
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0",
            "subnet_id": "subnet-081f9a966ce88f463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf8f407d421af155",
            "region": "us-east-1",
            "route_table_id": "rtb-0c19ba414edf34de0",
            "subnet_id": "subnet-075a43d7e06b80560"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090e288adbd48d255",
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25",
            "subnet_id": "subnet-0c30e43b74cc0335d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a3905055c93d27d",
            "region": "us-east-1",
            "route_table_id": "rtb-06df5a82afbac4a25",
            "subnet_id": "subnet-0aa8e0fda1647f990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-04a88128aaa207760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a88128aaa207760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-04a88128aaa207760",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-0aad56f29c800f826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aad56f29c800f826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-database-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-0aad56f29c800f826",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-081f9a966ce88f463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081f9a966ce88f463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-081f9a966ce88f463",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-075a43d7e06b80560",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075a43d7e06b80560",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-private-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-075a43d7e06b80560",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-0c30e43b74cc0335d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c30e43b74cc0335d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1a",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-0c30e43b74cc0335d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:subnet/subnet-0aa8e0fda1647f990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa8e0fda1647f990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "632193298015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-public-us-east-1b",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "subnet-0aa8e0fda1647f990",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632193298015:vpc/vpc-05481590518179f0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a73c7c4ab08c2a48",
            "default_route_table_id": "rtb-0806ffefbbf519a24",
            "default_security_group_id": "sg-0db208e4a3472b52d",
            "dhcp_options_id": "dopt-02cdabe100dbae3fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05481590518179f0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0806ffefbbf519a24",
            "owner_id": "632193298015",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev",
              "Project": "roboshop",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "632193298015",
            "id": "vpc-05481590518179f0a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fd6e8fb26174dfad",
            "peer_owner_id": "632193298015",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-072112754da905ebf",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "roboshop-dev-default",
              "Project": "roboshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05481590518179f0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_vpc.prod-vpc"
          ]
        }
      ]
    }
  ]
}